Logging en XSS document toegevoegd

--- a/Portfolio/portfolio/src/app/securityportfolio/securityportfolio.component.html
+++ b/Portfolio/portfolio/src/app/securityportfolio/securityportfolio.component.html
@@ -38,14 +38,26 @@
 				</div>
 			</a>
 			
-			<a routerLink="/seworkshop" routerLinkActive="active">
+			<a routerLink="/xss" routerLinkActive="active">
 				<div class="project float">
 					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
 					<div class="project_title">
-						Authenticatie Onderzoek
+						Xss Onderzoek
 					</div>
 					<div class="project_description">
-						Onderzoek richting authenticatie
+						Onderzoek richting XSS
+					</div>
+				</div>
+			</a>
+			
+			<a routerLink="/logging" routerLinkActive="active">
+				<div class="project float">
+					<img class="project_icon" src="./assets/img/plan.png" alt="Workshop pt1">
+					<div class="project_title">
+						Logging onderzoek
+					</div>
+					<div class="project_description">
+						Onderzoek over Logging met uitleg en voorbeelden
 					</div>
 				</div>
             </a>
