--- a/Portfolio/portfolio/src/app/document.css
+++ b/Portfolio/portfolio/src/app/document.css
@@ -19,7 +19,16 @@
 .content h1 {
     margin: 12.0pt 0 0;
     line-height: 107%;
-    font-size: 3em;
+    font-size: 2em;
+    font-family: K2D, Halvetica, Arial, sans-serif;
+    color: #b3b3b3;
+    font-weight: 300;
+
+}
+.content h2 {
+    margin: 12.0pt 0 0;
+    line-height: 107%;
+    font-size: 1.5em;
     font-family: K2D, Halvetica, Arial, sans-serif;
     color: #b3b3b3;
     font-weight: 300;
